--- a/styles.css
+++ b/styles.css
@@ -1,20 +1,124 @@
-
-
 html{
-    margin: 0%;
-    padding: 0%;
     background-color: #071952;
+    background-image: linear-gradient(to right, #561f77 , #071952);
     color: white;
+    font-family: 'Orbitron', sans-serif;
+    letter-spacing: 3px;
+    line-height: 25px;
+
 }
-
-.dots{
-    color:#40F8FF
-}
-
-
 
 body{
-    font-family: 'Orbitron', sans-serif;
+    margin: 10px 10px 10px 10px;
 }
 
 
+
+
+
+
+.grid-container{
+    display: grid;
+    gap: 10px;
+    grid-template-columns: 1fr 1fr;
+    grid-template-rows: .5fr 1fr 1fr 1fr 1fr;
+    
+    
+}
+.name{
+    grid-column: span 2;
+    
+
+    
+}
+
+
+.about{
+    grid-column: span 2;
+    width: 40%;
+    margin: auto; 
+}
+
+
+
+
+
+
+h2, h1{
+    text-align: center;
+}
+
+h3{
+    text-align: left;
+}
+
+h2{
+    color: #A6F6FF;
+}
+
+
+.btn{
+    background: #A6F6FF;
+    background-image: linear-gradient(to bottom, #11cdd4, #007478);
+    border-radius: 5px;
+    font-family: "Orbitron", sans-serif;
+    color: #ffffff;
+    font-size: 20px;
+    padding: 10px 20px 10px 20px;
+    text-decoration: none;
+    
+    
+}
+
+.contact{
+    grid-column: span 2;
+    margin: auto;
+}
+
+img{
+    border: thick double #32a1ce;
+    display: block;
+    margin-left: auto;
+    margin-right: auto;
+    opacity:.7 ;
+}
+
+@media (min-width:550px){
+    h1{
+        font-size: 4em ;
+    }
+    h2{
+        font-size: 2.5em;
+    }
+    h3{
+        font-size: 1.3em;
+    }
+    ul, p{
+        font-size:1em ;
+    }
+
+}
+
+@media (max-width: 420px){
+    .card{
+        grid-column: span 2;
+        
+    }
+    h2{
+        font-size:1em ;
+    }
+    h3{
+        font-size: .8em;
+
+    }
+
+    ul,p{
+        font-size:.7em ;
+    }
+
+    .about{
+        width: 90%;
+        margin: auto;
+    }
+    
+}
