--- a/styles.css
+++ b/styles.css
@@ -12,6 +12,9 @@ body{
     margin: 10px 10px 10px 10px;
 }
 
+h2{
+    line-height: 30px;
+}
 
 
 
@@ -113,11 +116,11 @@ img{
     }
 
     ul,p{
-        font-size:.7em ;
+        font-size:.5em ;
     }
 
     .about{
-        width: 90%;
+        width: 100%;
         margin: auto;
     }
     
